--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ patternbot:
   title: "Gametron"
   description: |
     A brand new online video game store, offering the best deals on your favorite games and accessories. Its time to game!
-  font_url: "https://fonts.googleapis.com/css?family=Fredoka+One|Raleway:400,400i,700,700i"
+  font_url: "https://fonts.googleapis.com/css?family=Baloo|Raleway&display=swap"
   colors:
     background: "--color-bg"
     accent: "--color-accent"
@@ -13,7 +13,7 @@ patternbot:
       brand.logos: "--color-primary-light"
   rationales:
     typefaces.secondary: |
-      Fredoka One was selected because it suits the whole feel and theme of the website, and will only be used for headings.
+      Baloo was selected because it suits the whole feel and theme of the website, and will only be used for headings.
     typefaces.primary: |
       Raleway is a clean and easy-to-read font that'll be used for most of the typographic content on the website.
     colors.primary: |
@@ -21,4 +21,4 @@ patternbot:
     colors.secondary: |
       The secondary colour is black, as it goes well with almost every other primary colour, in this case, red, which has been a popular pair for a long time.
     colors.accent: |
-      The accent colours are used for highlights and the background. They consist of gold, grey and a light tone of red.
+      The accent colours are used for highlights and the background. They consist of lime green, grey and a light tone of red.
