--- a/_patterns/cards/config.yml
+++ b/_patterns/cards/config.yml
@@ -1,4 +1,4 @@
-title: "Cards"
+title: "Images & Cards"
 description: |
   Cards are used to pair images, text and buttons together in a well-organized section.
 
@@ -7,11 +7,19 @@ patterns:
     title: "Buy now card"
     description: |
       A card that lists a product with its price and a buy now button.
-  banner-card:
-    title: "Banner card"
-    description: |
-      A clickable banner.
   pre-order-card:
     title: "Pre-order card"
     description: |
       A card with an image, product description and a button that lets one pre-order an upcoming product.
+  banner-card:
+    title: "Banner-card"
+    description: |
+      A clickable banner.
+  call-to-action:
+    title: "Call-to-Action Banner"
+    description: |
+      A banner some text and a button.
+  image-gallery:
+    title: "Image Gallery"
+    description: |
+      A collection of product images.
