--- a/_patterns/navigation/config.yml
+++ b/_patterns/navigation/config.yml
@@ -1,9 +1,19 @@
-title: "Navigation"
+title: "Navigation & Sections"
 description: |
   Navigation buttons are used to access other parts and sections of the page and perform functions like moving to the next and previous page.
 
 patterns:
-  navigation:
+  page-buttons:
     title: "Page buttons"
     description: |
       A group of buttons that lets the user navigate to different pages or go to the previous or next page.
+
+  product:
+    title: "Product-image section"
+    description: |
+      A section with a chunk of text and an image, usually used for a product's description.
+
+  banner:
+    title: "Banner"
+    description: |
+      A banner-like section that has some text and could have a button too.
